; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-video.c_clear_base_frame_data.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-video.c_clear_base_frame_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.obs_core_video }
%struct.obs_core_video = type { i32, i32, i64, i32 }

@obs = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @clear_base_frame_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_base_frame_data() #0 {
  %1 = alloca %struct.obs_core_video*, align 8
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @obs, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  store %struct.obs_core_video* %3, %struct.obs_core_video** %1, align 8
  %4 = load %struct.obs_core_video*, %struct.obs_core_video** %1, align 8
  %5 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %4, i32 0, i32 0
  store i32 0, i32* %5, align 8
  %6 = load %struct.obs_core_video*, %struct.obs_core_video** %1, align 8
  %7 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %6, i32 0, i32 1
  store i32 0, i32* %7, align 4
  %8 = load %struct.obs_core_video*, %struct.obs_core_video** %1, align 8
  %9 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %8, i32 0, i32 3
  %10 = call i32 @circlebuf_free(i32* %9)
  %11 = load %struct.obs_core_video*, %struct.obs_core_video** %1, align 8
  %12 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %11, i32 0, i32 2
  store i64 0, i64* %12, align 8
  ret void
}

declare dso_local i32 @circlebuf_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
